# ironpulse-sso-backend

./: .env.template  .gitignore  Cargo.toml  compose.yaml  config.toml
database/: client.sql  user.sql
src/: config.rs  errors.rs  handlers.rs  jwt.rs  main.rs  requests.rs  responses.rs
src/handlers/: admin.rs  login.rs  mod.rs  oauth2.rs  oidc.rs
src/query/: client.rs  mod.rs  user.rs
src/requests/: oidc.rs
src/responses/: mod.rs  oidc.rs
src/tables/: client.rs  user.rs
