[package]
name = "ironpulse-sso-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
# axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie"] }
jsonwebtoken = "9.3.0"
ring = "0.17.8"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_urlencoded = "0.7.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.82"
thiserror = "1.0.59"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
redis = "0.25.3"
bb8 = "0.8.3"
bb8-redis = "0.15.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
sha256 = "1.5.0"
tower-http = { version = "0.5.2", features = ["trace"] }
